<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >

    <TextView
        android:id="@+id/text_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:fontFamily="@font/pridi_medium"
        android:text="@string/botao_cadastro"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textoComp03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/texto_comp03"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_cadastro" />

    <EditText
        android:id="@+id/editTextNameComp"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:hint="@string/botao_nome"
        android:textAlignment="center"
        android:textColor="@color/fonte_01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoComp03" />

    <EditText
        android:id="@+id/editText_email02"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/outline_email_24"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:hint="@string/botao_email"
        android:textAlignment="center"
        android:textColor="@color/fonte_01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameComp" />

    <EditText
        android:id="@+id/editTextSenha02"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/lock"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/botao_senha"
        android:textAlignment="center"
        android:textColor="@color/fonte_01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_email02" />

    <EditText
        android:id="@+id/editTextSenhaConf"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/botao_senhaConf"
        android:textAlignment="center"
        android:textColor="@color/fonte_01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSenha02" />

    <Button
        android:id="@+id/button_proximo"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/pridi"
        android:onClick="clique"
        android:text="@string/botao_proximo"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSenhaConf" />

    <TextView
        android:id="@+id/textoComp7"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:onClick="abrirLogin"
        android:text="@string/texto_comp05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_proximo" />

    <TextView
        android:id="@+id/textoComp06"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/texto_comp06"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoComp7" />

</androidx.constraintlayout.widget.ConstraintLayout>

